# cpvt_database_analysis

./: .env.example  .gitattributes  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  backup_db.sh  config.yaml  docker-compose.yaml  environment.yml  pyproject.toml  requirements.txt
analysis/: 01_remove_papers.ipynb  02_add_rob_type.ipynb  03_add_rob_to_pub.ipynb  04_create_excel_file.ipynb  05_variant_counts.ipynb  06_01_normality_tests.ipynb  06_02_age_of_onset_what_symptoms.ipynb  06_age_of_onsets.ipynb  06_age_of_onsets_mann_whitney.ipynb  06_age_of_onsets_wilcox.ipynb  07_total_demographics.ipynb  08_cpvt_demographics.ipynb  09_beta_blocker_cpvt.ipynb  10_fisher_beta_blocker.R.ipynb  10_fisher_beta_blocker.ipynb  11_misc.ipynb  12_generate_s_tables.ipynb  12_generate_supplementary_tables.ipynb  12_publications_unique.ipynb  13_age_onset_vs_symptoms.ipynb  14_missense.ipynb  15_atrial_tachycardia.ipynb  all_py_files.md  config_files.md  database.py  eff_size.py  fisher_pct_plot.py  write_report.py
data/: fisher_sca_vs_syncope.csv  individual_all_data-0.3.0.xlsx  individual_all_data-0.3.1.xlsx  individual_all_data-0.3.2.xlsx  individual_all_data-0.3.3.xlsx  individual_all_data-0.3.4.xlsx
notebooks/: analysis_1.ipynb  analysis_2.ipynb  analysis_3.ipynb  analysis_4.ipynb  analysis_5.ipynb  clinvar_variants.ipynb  create_tabular_database.ipynb  pivot_tables.ipynb  pivot_tables_v1.ipynb
r_notebooks/: analysis_1.r.ipynb  analysis_2.r.ipynb  install.R
reviewer2/: question1.ipynb  question2.ipynb  question3.ipynb  question5.ipynb  question6.1.R.ipynb  (+4 more)
(+31 files in other folders)
