[tool.poetry]
name = "cpvt-database-analysis"
version = "0.1.0"
description = ""
authors = ["Alex Chang <ac4294@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}
openpyxl = "^3.1.5"
scipy = "^1.14.0"
scikit-posthocs = "^0.9.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
scikit-learn = "^1.5.1"
duckdb = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
